# idf_wifi_manager

./: .gitignore  CMakeLists.txt  Kconfig  component.mk
LI_WifiManager/: CMakeLists.txt  Kconfig  component.mk
LI_WifiManager/examples/hello_world_wfmanager/: CMakeLists.txt
LI_WifiManager/examples/hello_world_wfmanager/main/: CMakeLists.txt  blink.c
LI_WifiManager/src/: APP_WebServer_Esp32.c  APP_WebServer_Esp32.h  LI_Netif_Esp32.c  LI_Netif_Esp32.h
LI_WifiManager/src/pages/: custom_style.css  home.html  login.html  overview.html  scanned_devices  settings.html  style.css  wifi.html
examples/hello_world_wfmanager/main/: CMakeLists.txt  blink.c
src/: APP_WebServer_Esp32.c  APP_WebServer_Esp32.h  LI_Netif_Esp32.c  LI_Netif_Esp32.h
src/pages/: custom_style.css  home.html  login.html  scripts.js  style.css  wifi.html
